--- a/main.html
+++ b/main.html
@@ -47,6 +47,7 @@
 	<input id="password" type="password" placeholder="Password"required>
 	</div>
 	<div>
+	<label for="tos"></label>
 	<input type="checkbox"value="I agree to the TOS" id="tos">I agree to the TOS
 	</div>
 	<button type="submit">submit button</button>
