--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 		<input id="name" type="text" placeholder="Name" required>
 	</div>
 	<div>
-	<labek for="email">Email*</label>
-	<input  id="email" type="text" placeholder="Email"required>
+	<label for="email">Email*</label>
+ <input type="email" name="email" id="email" placeholder="Email" required>
 	</div>
 	<div>
 	<label>Gender*</label>
